tests/NormalTests/paczka1/fuzzy1/68048448.err
Error in line 4: A897 A897 34,5
Error in line 23: qMx S669 44,1
Error in line 36: qMx S397 99,7
